Closed Bug 1883570 Opened 2 years ago Closed 2 years ago

error: undefined symbol: mozilla::intl::OSPreferences::OSPreferences()

Categories

(Core :: Internationalization: Localization, defect)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

mozilla::intl::OSPreferences::OSPreferences is missing on iOS

We can use the same as the one for mac, as long as we use the headers
their SDKs have in common.

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/5ce513ef85f8 Build OSPreferences for iOS. r=platform-i18n-reviewers,dminor
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: