Bug 1883570 - Build OSPreferences for iOS. r=platform-i18n-reviewers,dminor

We can use the same as the one for mac, as long as we use the headers
their SDKs have in common.

Differential Revision: https://phabricator.services.mozilla.com/D203562